# softphone

./: .env.tmpl  Dockerfile  example.py  pyproject.toml
installs/: PJSIP.sh  PJSUA.sh  softphone.sh
softphone/: AIL_utills.py  AudioCallbacks.py
temp/: research.py
