[tool.poetry]
name = "softphone"
version = "0.1.0"
description = ""
authors = ["iamsvp94 <PSV1994@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
torchaudio = "^0.11.0"
aiohttp = "3.7.4"
async-timeout = "3.0.1"
attrs = "19.3.0"
cffi = "1.14.0"
chardet = "3.0.4"
idna = "2.10"
idna_ssl = "1.1.0"
multidict = "4.7.6"
pycparser = "2.20"
PyNaCl = "1.4.0"
python-dotenv = "0.14.0"
six = "1.15.0"
sounddevice = "0.3.15"
typing-extensions = "3.7.4.3"
websockets = "9.1"
yarl = "1.4.2"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
